# course_index

./: .gitignore  Cargo.toml
.sqlx/: query-66f1d3ef442c3a48468e28fd430a03280f6869fda74b167b25ccf7056db9b0e6.json  query-a2293c3bd6df818fe665c1ade8e9d484dc171397f2e135fde1a7250df2711d55.json
html/: course.html
src/: lib.rs  populate.rs
src/main/: course.rs  mod.rs  search.rs
