[package]
name = "course_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", default-features = false, features = ["macros"] }
askama = { version = "0.12.1", default-features = false, features = ["markdown"] }
futures = { version = "0.3.30", default-features = false }
itertools = { version = "0.12.1", default-features = false }
kuchikiki = { version = "0.8.2", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
regex = { version = "1.10.4", default-features = false, features = ["unicode"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.201", default-features = false }
split-first-char = "0.0.0"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros"] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }

[lib]
name = "courselib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main/mod.rs"

[[bin]]
name = "populate"
path = "src/populate.rs"
